/*
* Build configuration for SSFML.
*
* Builds the Sector Space Fabric Mod Loader bridge JAR.
* The output JAR is written to build/libs/.
*/

plugins {
    id 'java'
}

base {
    archivesName = "new_SSFML_Build"
}

repositories {
    // 1. Fabric repository for the loader
    maven {
        url = uri("https://maven.fabricmc.net")
    }
    // 2. MavenCentral for standard libraries and testing
    mavenCentral()

    // 3. Sponge for Mixins
    maven {
        url = uri("https://repo.spongepowered.org/maven/")
    }
}

dependencies {
    // Sector Space Game JAR as a local dependency.
    //
    // This is required to compile against Sector Space classes, but it must not be bundled into the output JAR.
    compileOnly files("libs/Sector Space.jar")

    // Local libraries used by the bridge.
    //
    // These remain available during compilation.
    implementation fileTree(
            dir: 'libs',
            include: ['*.jar'],
            exclude: ['Sector Space.jar']
    )

    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Apply a specific Java toolchain to ease working on different environments.
// This alone is sufficient to control both which JDK compiles this project and what bytecode version it targets.
// JDK 25 toolchain's javac defaults to targeting Java 25 bytecode with no separate sourceCompatibility/targetCompatibility
// or options.release override needed alongside it.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

// Deliberately bundled: Fabric's tiny-mappings-parser, needed to read mappings.tiny (an intentional resource, see app/src/main/resources/mappings.tiny)
// even though this bridge never remaps anything itself (mixins are all remap=false).
// Everything else that would otherwise be pulled in from libs/ - fabric-loader, asm, sponge-mixin, the game jar -
// stays out of the built jar entirely and is expected to already exist on the end user's machine at runtime instead.
def mappingsParserJar = fileTree(dir: 'libs', include: ['tiny-mappings-parser-0.3.0-build.17.jar'])

jar {
    manifest {
        attributes(
                // Point this to your Launcher class.
                'Main-Class': 'com.sector.bridge.KnotLauncher'
        )
    }

    from {
        mappingsParserJar.collect { file -> zipTree(file) }
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}